fix(Field): update disabled color on ios

--- a/src/field/index.less
+++ b/src/field/index.less
@@ -37,6 +37,7 @@
 
     &:disabled {
       color: @field-input-disabled-text-color;
+      -webkit-text-fill-color: @field-input-disabled-text-color;
       background-color: transparent;
       opacity: 1;
     }
